2006-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (conftoken_getc): Return an int.

2006-09-11  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup-dump.c: Works if rundump is not used.

2006-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1).
	* NEWS: Change in amanda-2.5.1

2006-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Typo in error message.

2006-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Print error message to stdout before
				  calling error().

2006-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c (log_msgout): Seek to begining of file.

2006-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Report if a dump was successfully retried.

2006-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Correct size for retried dump.

2006-08-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/runtar.c: Check that strcmp(argv[3], "--create") == 0.

2006-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/statfs.c (scale): Macro replaced by a function.

2006-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c: Use STREAM_BUFSIZE for stream_accept.
	* server-src/taper.c: Use STREAM_BUFSIZE for stream_accept.

2006-08-24  Maitreyee Karmarkar <maitreyee.zmanda.com>
	* man/xml-source/amcheck.8.xml: amcheck xml man page change 

2006-08-23  Kevin Till <ktill@zmanda.com>
	*  server-src/driver.c: fix typo

2006-08-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (dumper_result): Decrement pendings_aborts.
	* server-src/driver.c (handle_dumper_result): Don't send duper result
	  to chunker if we aborted it.
	* server-src/driverio.c (dumper_cmd, chunker_cmd): Don't close the fd
	  on ABORT.
	* server-src/dumper.c: Accept ABORT command.
